tests/NormalTests/paczka1/fuzzy1/28425266.err
Error in line 4: tTll S709 9,9
Error in line 8: tTll S190 51,9
Error in line 23: tTll A161 188,0
